fix spacing before steps in register page

--- a/assets/scss/pages/_register.scss
+++ b/assets/scss/pages/_register.scss
@@ -105,7 +105,7 @@
             content: "";
             display: block;
             position: absolute;
-            top: 65px;
+            top: 25px;
             width: 50%;
             height: 2px;
             background-color: var(--main-color);
@@ -121,7 +121,6 @@
           a {
             position: relative;
             padding-top: 55px;
-            margin-top: 40px;
             margin-bottom: 40px;
             display: block;
             text-decoration: none;
